@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-25T08:10:36Z",
-  "count_outdated" : 4796,
-  "uniques_outdated" : 1390,
+  "timestamp" : "2023-07-26T00:43:53Z",
+  "count_outdated" : 4817,
+  "uniques_outdated" : 1403,
   "count" : 4875,
   "uniques" : 1439,
   "clones" : [
-    {
-      "timestamp": "2023-07-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 21 ],
-      "count_decinc": [ 20, 21 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 13 ],
-      "uniques_decinc": [ 12, 13 ]
-    },
     {
       "timestamp": "2023-07-12T00:00:00Z",
       "count": 2,
