@@ -1,12 +1,7 @@
 {
-  "count": 59,
-  "uniques": 23,
+  "count": 58,
+  "uniques": 22,
   "clones": [
-    {
-      "timestamp": "2023-07-11T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-07-12T00:00:00Z",
       "count": 2,
